Agregue mi nombre y apellido

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Suma de Dos Numeros</h1>
+    <h2>Joel Castillo Caballero</h2>
     <input type="number" id="num1" placeholder="Numero1">
     <input type="number" id="num2" placeholder="Numero2">
     <button id="sumBtn">Sumar</button>
